<resources>
    <string name="login_aty_login">Login</string>
    <string name="login_aty_email_phone">Mobile/Email</string>
    <string name="login_aty_pw">New password (min. 6 characters)</string>
    <string name="login_aty_input_email_phone">Enter mobile/email</string>
    <string name="login_aty_input_pw">Enter password</string>
    <string name="login_aty_pw_ensure">Reenter new password</string>
    <string name="login_aty_fw">Forgot password？</string>
    <string name="login_aty_wrong_email">Invalid account format</string>
    <string name="regist_wrong_account">Incorrect mobile/email</string>
    <string name="regist_wrong_email">Invalid email address</string>
    <string name="login_account_error">Incorrect user name</string>
    <string name="login_aty_account_no">Account is unavailable</string>
    <string name="login_aty_pw_error">Incorrect password</string>
    <string name="login_aty_timeout">Connection timed out</string>
    <string name="register_aty_email_registered">Account already exists</string>
    <string name="register2_reset_pass">Forgot password</string>
    <string name="register2_aty_obtain_suc">Verification code sent</string>
    <string name="register2_aty_code_wrong">Incorrect verification code</string>
    <string name="register2_aty_error_char">Password contains illegal characters</string>
    <string name="register2_aty_short_char">Password (6–18 characters)</string>
    <string name="register2_aty_no_same">Password unmatched</string>
    <string name="register2_aty_reset_suc">Password reset completed </string>
    <string name="register2_aty_code_nouse">Verification code expired</string>
    <string name="register2_aty_illegal_email">Invalid account</string>
    <string name="register2_aty_account_abnormal">Account currently disabled</string>
    <string name="main_aty_my_robot">My robot</string>
    <string name="main_aty_add_robot">Add a robot</string>
    <string name="main_aty_press_exit">Press again to exit</string>
    <string name="select_x_aty_add">Add a robot</string>
    <string name="guide_ap_prepare">Preparing to find a network</string>
    <string name="guide_aty_next">Next</string>
    <string name="ap_aty_input_pass">Enter WiFi password</string>
    <string name="ap_aty_input_wifi_ssid">Choose a WiFi network</string>
    <string name="add_aty_start_connect">Start connecting</string>
    <string name="add_aty_wrong_wifi_pass">Password contains illegal characters</string>
    <string name="ap_guide_aty_tip1_x900">Turn on power switch on the side of the main body.</string>
    <string name="ap_guide_aty_tip1_1_x900">Note: Don\'t place main body on charging dock or leave the robot near the charging Station.</string>
    <string name="ap_guide_aty_tip2_x900">Press and hold for 3 seconds and you will hear a buzz. Don\'t release until voice announcement says \"Starting WiFi pairing mode\". WiFi light starts blinking once robot enters AP mode.  </string>
    <string name="ap_guide_aty_tip2_a9">Press and hold for 3 seconds and you will hear a buzz. Don\'t release until voice announcement says \"Starting WiFi pairing mode\". WiFi light starts blinking once robot enters AP mode.  </string>
    <string name="ap_guide_aty_tip2_a9s">Press and hold the start button until you hear a \"Beep\" and \"Starting Wifi pairing mode\". Then the Wifi lights starts blinking.</string>
    <string name="ap_guide_aty_tip2_x7">Press and hold AP network distribution key for 3 seconds and you will hear a buzz. Don\'t release until you hear two buzzes. Robot enters AP mode and WiFi light starts blinking. </string>
    <string name="ap_guide_aty_tip2_v85">Press and hold AP network distribution key for 8 seconds and you will hear a buzz. Robot enters AP mode and WiFi light starts blinking.</string>
    <string name="ap_guide_tip4">No voice announcement. Retry previous steps.</string>
    <string name="ap_guide_already_open_device">Robot already switched on</string>
    <string name="ap_guide_already_open_wifi">\"Starting WiFi pairing mode\" already announced</string>
    <string name="ap_guide_already_open_wifi_a9s">\"Starting WiFi pairing mode\" already announced</string>
    <string name="ap_guide_have_heard_didi">\"beep\" is heard.</string>
    <string name="ap_aty_setting">Settings</string>
    <string name="wifi_guide_aty_tip2">Note: Robot can\'t connect to 5G WiFi</string>
    <string name="add_aty_no_wifi">WiFi not connected</string>
    <string name="ap_aty_robot_wifi">Robot WiFi:</string>
    <string name="third_ap_tip2">Note:</string>
    <string name="third_ap_aty_tip1">Please click right top \"Settings\", go back to cellphone WiFi setting.Select \"Robot-XXXX\" connection. Enter default password: 123456789. Return to current page and press \"Start connecting\".</string>
    <string name="third_ap_aty_port_">Connect to WiFi starting with \"Robot-\"</string>
    <string name="bind_suc_aty_name">Name your robot</string>
    <string name="bind_suc_sty_robot_done">Completed</string>
    <string name="bind_aty_reName_suc">Nickname change completed</string>
    <string name="bind_aty_reName_fail">Nickname change failed</string>
    <string name="open_gps_location">Enable GPS</string>
    <string name="open_gps_location_tip">WiFi network search begins once the power switch is turned on.</string>
    <string name="please_not_exit_app">Don\'t move APP to background</string>
    <string name="ap_wifi_guide">Connecting to home WiFi</string>
    <string name="device_adapter_device_status">Status:</string>
    <string name="device_adapter_device_online">Online</string>
    <string name="device_adapter_device_offline">Offline</string>
    <string name="main_aty_unbind">Unbind</string>
    <string name="main_aty_unbind_device">Unbind device</string>
    <string name="main_aty_unbind_device_tip">Unbind device now?</string>
    <string name="main_aty_unbind_fail">Unbinding failed</string>
    <string name="dev_frag_offline">Device is offline</string>
    <string name="dev_frag_try">Check if WiFi is working. Refresh the page if connection is working.</string>
    <string name="dev_frag_ok">OK</string>
    <string name="personal_aty_personal_center">My account</string>
    <string name="personal_aty_set_name">User name</string>
    <string name="personal_aty_help">Help</string>
    <string name="personal_aty_scan">Scan</string>
    <string name="personal_aty_share">Share a device</string>
    <string name="personal_aty_version">VersionV%1$s %2$s</string>
    <string name="user_agreement">User agreement</string>
    <string name="personal_aty_protocol">Privacy policy and service agreement</string>
    <string name="personal_acy_exit">Log out</string>
    <string name="personal_aty_cancel">Cancel</string>
    <string name="dialog_del_confirm">Confirm</string>
    <string name="confirm">Completed</string>
    <string name="setting_aty_devName_null">Enter user name</string>
    <string name="personal_aty_reset_suc">User name change completed</string>
    <string name="personal_aty_reset_fail">User name change failed</string>
    <string name="personal_aty_exit_content">Log out and retain all history</string>
    <string name="personal_acy_del">Delete account</string>
    <string name="personal_aty_del_content">"Your account will no longer be available on ILIFE ROBOT for iOS,or ILIFE ROBOT for Android three days later. "</string>
    <string name="personal_aty_no_shareable">You don\'t have any device to share</string>
    <string name="personal_aty_login_first">Please login</string>
    <string name="personal_aty_avatar_suc">Profile photo change completed</string>
    <string name="personal_aty_avatar_fail">Profile photo change failed</string>
    <string name="per_fgm_gain_fail">Scan QR code failed</string>
    <string name="personal_aty_bind_done">Robot bound completed</string>
    <string name="personal_aty_bind_fail">Binding failed</string>
    <string name="help_aty_commit_suc">Submitted</string>
    <string name="help_aty_commit">Unable to submit. Try again</string>
    <string name="personal_aty_scan_code">Scan QR code to share a robot</string>
    <string name="personal_aty_support">Technical support</string>
    <string name="personal_aty_feedback">Feedback</string>
    <string name="personal_input_email">Enter email</string>
    <string name="personal_aty_chose_type">Select product model</string>
    <string name="help_aty_content">Detail the issues you\'ve encountered</string>
    <string name="personal_aty_count">140 characters left</string>
    <string name="help_aty_text_count">%1$s characters left</string>
    <string name="help_aty_add_pic">Add a photo</string>
    <string name="help_aty_add_pic1">(JPG/PNG/WBMP)</string>
    <string name="help_aty_photo">Take a photo</string>
    <string name="help_aty_album">Album</string>
    <string name="feedback_aty_type_null">Select product model</string>
    <string name="help_aty_content_isnull">Your feedback</string>
    <string name="feedback_aty_count_limit">Word limit exceeded</string>
    <string name="capture_aty_scan">Scan QR code or barcode inside the square on the screen</string>
    <string name="map_aty_title">%1$sRobot Vacuum Cleaner</string>
    <string name="map_aty_status">Status</string>
    <string name="map_aty_gang">— —</string>
    <string name="setting_aty_area">Area</string>
    <string name="setting_aty_end_reason">Task terminated:%1$s</string>
    <string name="map_aty_time">Time</string>
    <string name="map_aty_remaining_charge">Battery</string>
    <string name="map_aty_exception">Error</string>
    <string name="map_aty_sleep">Sleep</string>
    <string name="map_aty_standby_mode">Standby</string>
    <string name="map_aty_random">Auto</string>
    <string name="map_aty_along">Edge</string>
    <string name="map_aty_point">Spot</string>
    <string name="map_aty_plan_mode">S-shaped</string>
    <string name="map_aty_charge">Charging</string>
    <string name="map_aty_remote">Remote</string>
    <string name="map_aty_stop">Pause</string>
    <string name="map_aty_start">Start</string>
    <string name="map_aty_appoint">Schedule</string>
    <string name="consume_aty_resetSide">Reset side brush life now</string>
    <string name="consume_aty_resetSide_over">Side brush status will be updated after reset</string>
    <string name="map_aty_set_wall">Enter Electrowall setting</string>
    <string name="map_aty_will_stop">Current task will be paused</string>
    <string name="robot_connected">Connected</string>
    <string name="back_to_recharge">Return to charging dock</string>
    <string name="finish_the_cleaning">End current cleaning</string>
    <string name="tip_troubleshoot">Follow the steps to find possible problems:</string>
    <string name="tip_troubles">1. Is WiFi password correct?\n\n2. Is robot in AP mode?\n\n3. Is mobile phone connected to non-5G WiFi?\n\n4. Is wireless router black/whitelist function disabled (MAC filtering)?</string>
    <string name="retry">Retry</string>
    <string name="need_save_settings">Save the settings</string>
    <string name="will_work_on_next_time">New settings will apply to the next cleaning mission.</string>
    <string name="save_and_back">Save and back</string>
    <string name="not_saved">Unsave</string>
    <string name="cancel_">Cancel</string>
    <string name="prepare_find_net_tip1">Now we connect the robot with your WiFi.</string>
    <string name="cnt_home_wifi_tip1">1. Choose your Wifi at home and type in your Wifi password.</string>
    <string name="cnt_home_wifi_tip2">Tip: the maximum length of your WiFi Password should be 32 characters.</string>
    <string name="cnt_home_wifi_tip3">Note: Please choose a 2.4GHz Wifi. Robot can\'t connect to 5GHz WiFi.</string>
    <string name="prepare_find_net_tip2">Three easy steps to connect:  \n\n1. Choose your Wifi at home and type in your WiFi password  \n\n2. The robot creates it\'s own WiFi, connect with it  \n\n3. Ready! Your robot is connected.</string>
</resources>