<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/template_top_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_24"
        android:paddingEnd="@dimen/dp_24">

        <com.ilife.iliferobot.view.MediumTextView
            style="@style/Text_18sp_33"
            android:layout_marginTop="@dimen/dp_50"
            android:text="@string/prepare_find_net_tip1" />

        <TextView
            style="@style/Text_16sp_33"
            android:layout_marginTop="@dimen/dp_50"
            android:text="@string/prepare_find_net_tip2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.ilife.iliferobot.view.RegularButton
            android:id="@+id/bt_prepare_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_100"
            android:background="@drawable/n_all_bt_bg"
            android:text="@string/guide_aty_next"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>