<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/offline_dialog_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.ilife.iliferobot_cn.view.RegularTextView
            style="@style/Text_16sp_33"
            android:text="@string/dev_frag_offline"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_23"/>
        <com.ilife.iliferobot_cn.view.LightTextView
            style="@style/Text_12sp_ac"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/dev_frag_try"
            android:layout_marginTop="@dimen/dp_9"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="@dimen/dp_13"/>
    </LinearLayout>

    <View
        style="@style/View_Line_Style" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:id="@+id/rl_ok">
        <com.ilife.iliferobot_cn.view.RegularTextView
            style="@style/Text_16sp_33"
            android:text="@string/dev_frag_ok"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</LinearLayout>