<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qr_code_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_92">
        <com.ilife.iliferobot_cn.view.RegularTextView
            style="@style/Text_16sp_33"
            android:id="@+id/tv_title"
            android:text="@string/map_aty_set_wall"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_20" />
        <com.ilife.iliferobot_cn.view.LightTextView
            style="@style/Text_14sp_ac"
            android:id="@+id/et_name"
            android:hint="@string/map_aty_will_stop"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="@dimen/dp_10" />
    </RelativeLayout>
    <View
        style="@style/View_Line_Style"
        android:layout_marginStart="@dimen/dp_1"
        android:layout_marginEnd="@dimen/dp_1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:orientation="horizontal">
        <com.ilife.iliferobot_cn.view.RegularTextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_f08300"
            android:text="@string/personal_aty_cancel"
            android:includeFontPadding="false"
            android:gravity="center"/>
        <View
            android:alpha="50"
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/color_e2"
            />
        <com.ilife.iliferobot_cn.view.RegularTextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_595757"
            android:text="@string/dialog_del_confirm"
            android:includeFontPadding="false"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>