<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/zxing_transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_30"
    android:paddingLeft="@dimen/dp_30"
    android:paddingRight="@dimen/dp_30">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect_white"
        android:orientation="vertical">

        <com.ilife.iliferobot_cn.view.RegularTextView
            android:id="@+id/tv_back_recharge"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:gravity="center"
            android:text="@string/back_to_recharge"
            android:textColor="@color/color_ff1b92e2"
            android:textSize="@dimen/sp_16" />

        <View style="@style/View_Line_Style" />

        <com.ilife.iliferobot_cn.view.RegularTextView
            android:id="@+id/tv_finish_cleaning"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:gravity="center"
            android:text="@string/finish_the_cleaning"
            android:textColor="@color/color_ff1b92e2"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <com.ilife.iliferobot_cn.view.RegularTextView
        android:id="@+id/tv_cancel_dialog"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/shape_rect_white"
        android:gravity="center"
        android:text="@string/personal_aty_cancel"
        android:textColor="@color/color_f08300"
        android:textSize="@dimen/sp_16" />
</LinearLayout>